# kinematrix_edge

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
benchmark/: CMakeLists.txt  bench_main.cpp
cli/: CMakeLists.txt  csv_parser.cpp  csv_parser.hpp  main.cpp
dashboard/: main.py
dashboard/static/: app.js  index.html
data/: sample_path.csv
docs/: benchmark-arm.md
docs/superpowers/plans/: 2026-05-15-kinematrix-edge.md
docs/superpowers/specs/: 2026-05-15-kinematrix-edge-design.md
lib/: CMakeLists.txt
lib/include/kinematrix/: ik.hpp  spline.hpp  types.hpp
lib/src/: ik.cpp  spline.cpp
tests/: CMakeLists.txt  test_csv.cpp  test_ik.cpp  test_spline.cpp
